--- a/carrentalmanagement/RENT_RETURN.form
+++ b/carrentalmanagement/RENT_RETURN.form
@@ -230,7 +230,7 @@
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                   <Table columnCount="3" rowCount="0">
                     <Column editable="true" title="Car Brand" type="java.lang.Object"/>
-                    <Column editable="true" title="Name" type="java.lang.Object"/>
+                    <Column editable="true" title="Customer" type="java.lang.Object"/>
                     <Column editable="true" title="Return Date" type="java.lang.Object"/>
                   </Table>
                 </Property>
@@ -328,9 +328,9 @@
                                   </Group>
                                   <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="0" attributes="0">
-                                      <Component id="numberplate1" min="-2" pref="106" max="-2" attributes="0"/>
                                       <Component id="carplate1_lbl2" alignment="0" min="-2" max="-2" attributes="0"/>
                                       <Component id="CarPic" min="-2" pref="199" max="-2" attributes="0"/>
+                                      <Component id="numberplate1" alignment="0" min="-2" pref="166" max="-2" attributes="0"/>
                                   </Group>
                               </Group>
                               <Group type="102" alignment="0" attributes="0">
@@ -485,6 +485,7 @@
         <Component class="javax.swing.JButton" name="savebtn1">
           <Properties>
             <Property name="text" type="java.lang.String" value="Save"/>
+            <Property name="enabled" type="boolean" value="false"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="savebtn1ActionPerformed"/>
@@ -493,12 +494,16 @@
         <Component class="javax.swing.JButton" name="clearbtn1">
           <Properties>
             <Property name="text" type="java.lang.String" value="Clear"/>
+            <Property name="enabled" type="boolean" value="false"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="clearbtn1ActionPerformed"/>
           </Events>
         </Component>
         <Component class="javax.swing.JTextField" name="namefield1">
+          <Properties>
+            <Property name="enabled" type="boolean" value="false"/>
+          </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="namefield1ActionPerformed"/>
           </Events>
@@ -585,13 +590,22 @@
           </Properties>
         </Component>
         <Component class="com.toedter.calendar.JDateChooser" name="jDateChooser1">
+          <Properties>
+            <Property name="enabled" type="boolean" value="false"/>
+          </Properties>
         </Component>
         <Component class="com.toedter.calendar.JDateChooser" name="jDateChooser2">
+          <Properties>
+            <Property name="enabled" type="boolean" value="false"/>
+          </Properties>
           <Events>
             <EventHandler event="propertyChange" listener="java.beans.PropertyChangeListener" parameters="java.beans.PropertyChangeEvent" handler="jDateChooser2PropertyChange"/>
           </Events>
         </Component>
         <Component class="javax.swing.JTextField" name="dpfield">
+          <Properties>
+            <Property name="enabled" type="boolean" value="false"/>
+          </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="dpfieldActionPerformed"/>
           </Events>
@@ -599,8 +613,9 @@
         <Component class="javax.swing.JLabel" name="CarPic">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="Segoe UI" size="14" style="0"/>
+              <Font name="Segoe UI" size="14" style="1"/>
             </Property>
+            <Property name="text" type="java.lang.String" value="[Select a Car Brand]"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="carplate1_lbl1">
@@ -622,9 +637,9 @@
         <Component class="javax.swing.JLabel" name="numberplate1">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="Segoe UI" size="14" style="0"/>
+              <Font name="Segoe UI" size="14" style="1"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Plate No."/>
+            <Property name="text" type="java.lang.String" value="[Select a Car Brand]"/>
           </Properties>
         </Component>
       </SubComponents>
